[gd_scene load_steps=7 format=3 uid="uid://dmyq6xxfx88m0"]

[ext_resource type="Script" uid="uid://vkw5u7nwwyeh" path="res://material_maker/tools/environment_manager/environment_manager.gd" id="1"]

[sub_resource type="World3D" id="World3D_620e6"]

[sub_resource type="Sky" id="1"]

[sub_resource type="Environment" id="2"]
background_mode = 2
sky = SubResource("1")

[sub_resource type="SphereMesh" id="3"]
radius = 2.0
height = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lfvfh"]
metallic = 1.0
roughness = 0.2

[node name="EnvironmentManager" type="Node"]
script = ExtResource("1")

[node name="PreviewGenerator" type="SubViewport" parent="."]
world_3d = SubResource("World3D_620e6")
handle_input_locally = false
size = Vector2i(64, 64)
render_target_update_mode = 0

[node name="CameraPosition" type="Node3D" parent="PreviewGenerator"]

[node name="CameraRotation1" type="Node3D" parent="PreviewGenerator/CameraPosition"]

[node name="CameraRotation2" type="Node3D" parent="PreviewGenerator/CameraPosition/CameraRotation1"]

[node name="Camera3D" type="Camera3D" parent="PreviewGenerator/CameraPosition/CameraRotation1/CameraRotation2"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 2, 4)
environment = SubResource("2")
current = true

[node name="Sun" type="DirectionalLight3D" parent="PreviewGenerator"]
transform = Transform3D(1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0)

[node name="Sphere" type="MeshInstance3D" parent="PreviewGenerator"]
mesh = SubResource("3")
surface_material_override/0 = SubResource("StandardMaterial3D_lfvfh")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="Timer" to="." method="do_update_thumbnail"]
